# ecs-samples

./: .gitignore  README.md
aws-java-workshop/: aws-java-workshop.iws  build.gradle
aws-net-workshop/: aws-net-workshop.sln
aws-net-workshop/aws-net-workshop/: AWSS3Factory.cs  aws-net-workshop.csproj  packages.config
aws-put-metrics-workshop/: README.md
aws-scala-workshop/: build.gradle
boto-python-workshop/: 00_getting_started.py  01_list_objects.py
boto3-python-workshop/: 00_BucketBasics.py  00_Getting_Started.py  01_ObjectBasics.py  02_ObjectsWithMetadata.py  03_LargeObject.py  04_ListObjects.py  05_UpdateAppend  05_UpdateAppend.py  06_PresignedURLs.py  07_Versioning.py  08_BucketLifeCycle.py  09_BucketRetention.py  10_BucketACL.py  11_ObjectACL.py  GetConnection.py  README.md
docs/: Developing with the ECS Management API.pptx
ecs-api-workshop/: README.md  build.gradle
ecs-cpp-jni-s3-workshop/: CMakeLists.txt  README.txt
ecs-cpp-jni-s3-workshop/examples/: 01_getversion.cpp  02_listbucket.cpp
ecs-cpp-jni-s3-workshop/lib/: ecss3client.cpp  ecss3client.h  ecss3factory.cpp  ecss3factory.h
ecs-go-certs/: main.go
ecs-go-s3-workshop/: Makefile  README  README.md  config.yaml
ecs-java-s3-workshop/: build.gradle  create_project.sh
ecs-metrics-workshop/: CasTester.java  README.md
ecs-net-workshop/: ecs-net-workshop.sln
ecs-operator/: README.md
ecs-operator/cluster-operator/: .travis.yml  (+6 more)
ecs_net_workshop/: ecs_net_workshop.sln
ecspics-loader/: ecspics-loader.sln
mgmt-net-workshop/: mgmt-net-workshop.sln
nautilus-operator/: README.md
(+469 files in other folders)
